# bearing_ws

./: .gitignore
devel/: .catkin  .rosinstall  setup.sh
devel/include/ygc/: Bearing2D.h  GroupBearing.h
devel/lib/formation/: formation_node
devel/lib/pkgconfig/: formation.pc  px4_velocity_control_node.pc  ygc.pc
devel/lib/px4_velocity_control_node/: px4_velocity_control_node
devel/lib/ygc/: ygc_node
mavlink/: .gitignore
mavlink/v2.0/ASLUAV/: ASLUAV.h  ASLUAV.hpp  version.h
mavlink/v2.0/ardupilotmega/: ardupilotmega.h  ardupilotmega.hpp  mavlink_msg_adap_tuning.hpp  mavlink_msg_ahrs.hpp  mavlink_msg_ahrs2.hpp  mavlink_msg_ahrs3.hpp  mavlink_msg_airspeed_autocal.hpp  mavlink_msg_aoa_ssa.hpp  mavlink_msg_ap_adc.hpp  mavlink_msg_autopilot_version_request.hpp  mavlink_msg_battery2.hpp  mavlink_msg_camera_feedback.hpp  mavlink_msg_camera_status.hpp  mavlink_msg_compassmot_status.hpp  mavlink_msg_data16.hpp  mavlink_msg_data32.hpp  mavlink_msg_data64.hpp  mavlink_msg_data96.hpp  mavlink_msg_deepstall.hpp  mavlink_msg_device_op_read.hpp  mavlink_msg_device_op_read_reply.hpp  mavlink_msg_device_op_write.hpp  mavlink_msg_device_op_write_reply.hpp  mavlink_msg_digicam_configure.hpp  mavlink_msg_digicam_control.hpp  mavlink_msg_ekf_status_report.hpp  mavlink_msg_fence_fetch_point.hpp  mavlink_msg_fence_point.hpp  mavlink_msg_fence_status.hpp  mavlink_msg_gimbal_control.hpp  mavlink_msg_gimbal_report.hpp  mavlink_msg_gimbal_torque_cmd_report.hpp  mavlink_msg_gopro_get_request.hpp  mavlink_msg_gopro_get_response.hpp  mavlink_msg_gopro_heartbeat.hpp  mavlink_msg_gopro_set_request.hpp  mavlink_msg_gopro_set_response.hpp  mavlink_msg_hwstatus.hpp  mavlink_msg_led_control.hpp  mavlink_msg_limits_status.hpp  (+21 more)
mavlink/v2.0/autoquad/: autoquad.h  autoquad.hpp  version.h
mavlink/v2.0/common/: common.h  common.hpp  mavlink_msg_actuator_control_target.hpp  mavlink_msg_adsb_vehicle.hpp  mavlink_msg_altitude.hpp  mavlink_msg_att_pos_mocap.hpp  mavlink_msg_attitude.hpp  mavlink_msg_attitude_quaternion.hpp  mavlink_msg_attitude_quaternion_cov.hpp  mavlink_msg_attitude_target.hpp  mavlink_msg_autopilot_version.hpp  mavlink_msg_battery_status.hpp  mavlink_msg_button_change.hpp  mavlink_msg_camera_capture_status.hpp  mavlink_msg_camera_image_captured.hpp  mavlink_msg_camera_information.hpp  mavlink_msg_camera_settings.hpp  mavlink_msg_camera_trigger.hpp  mavlink_msg_collision.hpp  mavlink_msg_command_ack.hpp  mavlink_msg_command_int.hpp  mavlink_msg_command_long.hpp  mavlink_msg_control_system_state.hpp  mavlink_msg_data_stream.hpp  mavlink_msg_data_transmission_handshake.hpp  mavlink_msg_debug.hpp  mavlink_msg_debug_vect.hpp  mavlink_msg_distance_sensor.hpp  mavlink_msg_estimator_status.hpp  mavlink_msg_flight_information.hpp  mavlink_msg_follow_target.hpp  mavlink_msg_global_position_int.hpp  mavlink_msg_global_position_int_cov.hpp  mavlink_msg_global_vision_position_estimate.hpp  mavlink_msg_gps2_raw.hpp  mavlink_msg_gps2_rtk.hpp  mavlink_msg_gps_global_origin.hpp  mavlink_msg_gps_input.hpp  mavlink_msg_gps_raw_int.hpp  mavlink_msg_gps_rtk.hpp  (+101 more)
mavlink/v2.0/icarous/: version.h
mavlink/v2.0/matrixpilot/: matrixpilot.h  matrixpilot.hpp  version.h
mavlink/v2.0/paparazzi/: version.h
mavlink/v2.0/slugs/: slugs.h  slugs.hpp  version.h
mavlink/v2.0/standard/: version.h
mavlink/v2.0/uAvionix/: uAvionix.h  version.h
mavlink/v2.0/ualberta/: version.h
src-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
src-build/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
src-build/devel/: .rosinstall  setup.sh
src-build/formation/: CTestTestfile.cmake  Makefile  cmake_install.cmake  formation.cbp
src-build/formation/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
src-build/px4_velocity_control_node/: CTestTestfile.cmake  Makefile  cmake_install.cmake  px4_velocity_control_node.cbp
src-build/px4_velocity_control_node/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src-build/ygc/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ygc.cbp
src-build/ygc/catkin_generated/: pkg.develspace.context.pc.py  (+1 more)
src/bearing_common/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/bearing_common/core/include/smarteye/core/: MathCal.h  core.hpp  core.hpp~
src/bearing_common/core/src/: MathCal.cpp
src/bearing_common/include/: 3rd_party_header.h
src/bearing_common/msg/: AllPosition.msg  TriggerRec.msg
src/bearing_common/src/: 3rd_party_header.cpp
src/bearing_common/srvs/commander/: HParamSetSrv.srv  ReqAllVehicleState.srv  UInt16Srv.srv
src/bearing_common/srvs/communication/: ReqAllPos.srv  ReqPullRoute.srv  ReqPullRoute.srv~  ReqPushRoute.srv  ReqPushRoute.srv~
src/bearing_common/srvs/route_manager/: ReqFmRoute.srv
src/commander/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/commander/include/commander/: commander.h  host_param.txt  host_param.txt~
src/commander/launch/: commander.launch
src/commander/src/: commander.cpp  commander.cpp.autosave  commander_node.cpp  manage_param.cpp
src/formation/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/formation/cfg/: formation.cfg~  formationCFG.cfg
src/formation/include/: formation.h
src/formation/launch/: debug.launch  debug.launch~  formation.launch  formation.launch~  multi_uav.launch  multi_uav.launch~  single.launch  single.launch~
src/formation/src/: dynamic_reconfigure_node.cpp  formation.cpp  formation.cpp.autosave  main.cpp  paramSetClient.py  paramSetClient.py~
src/mavros_extras/: mavros_plugins.xml
src/px4_velocity_control_node/: CMakeLists.txt
src/ygc/: CMakeLists.txt  package.xml~
src/ygc/include/: ygc.h  ygc.h.autosave  ygc.h~
src/ygc/launch/: formation.launch~  ygc.launch  ygc.launch~
src/ygc/msg/: DataRecord.msg  GroupBearing.msg  GroupBearing.msg~
src/ygc/src/: main.cpp  ygc.cpp  ygc.cpp.autosave  ygc.cpp~
(+37 files in other folders)
